--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
 
             container.innerHTML = teamData.map(member => `
                 <div class="bg-white rounded-xl shadow-md overflow-hidden border border-gray-100">
-                    <img src="${escapeHtml(member.image_url)}" alt="${escapeHtml(member.name)}" class="w-full h-64 object-cover" loading="lazy">
+                    <img src="${escapeHtml(convertToDirectImageUrl(member.image_url))}" alt="${escapeHtml(member.name)}" class="w-full h-64 object-cover" loading="lazy">
                     <div class="p-6">
                         <h3 class="text-xl font-bold mb-1">${escapeHtml(member.name)}</h3>
                         <p class="text-accent font-medium mb-4">${escapeHtml(member.title)}</p>
