--- a/index.html
+++ b/index.html
@@ -341,7 +341,6 @@
                     <p class="mb-4">AI-powered hedge fund delivering superior risk-adjusted returns.</p>
                     <div class="flex space-x-4">
                         <a href="#" class="text-gray-400 hover:text-white transition"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="#" class="text-gray-400 hover:text-white transition"><i class="fab fa-twitter"></i></a>
                     </div>
                 </div>
                 <div>
@@ -356,23 +355,21 @@
                 <div>
                     <h3 class="text-white font-semibold mb-4">Legal</h3>
                     <ul class="space-y-2">
-                        <li><a href="#" class="hover:text-white transition">Disclosures</a></li>
-                        <li><a href="#" class="hover:text-white transition">Privacy Policy</a></li>
-                        <li><a href="#" class="hover:text-white transition">Terms of Service</a></li>
+                        <li><a href="#" onclick="openLegalModal('disclosures'); return false;" class="hover:text-white transition">Disclosures</a></li>
+                        <li><a href="#" onclick="openLegalModal('privacy'); return false;" class="hover:text-white transition">Privacy Policy</a></li>
+                        <li><a href="#" onclick="openLegalModal('terms'); return false;" class="hover:text-white transition">Terms of Service</a></li>
                     </ul>
                 </div>
                 <div>
                     <h3 class="text-white font-semibold mb-4">Contact</h3>
                     <address class="not-italic">
-                        <p class="mb-2">3705 Fortuna Ranch Rd</p>
                         <p class="mb-2">Encinitas, CA 92024</p>
                         <p class="mb-2">info@dreadnaughtcapital.com</p>
-                        <p>+1 (760) 555-0100</p>
                     </address>
                 </div>
             </div>
             <div class="border-t border-gray-800 mt-12 pt-8 text-sm text-center">
-                <p>&copy; 2024 Dreadnaught Capital. All rights reserved.</p>
+                <p>&copy; 2026 Dreadnaught Capital. All rights reserved.</p>
                 <p class="mt-2">Past performance is not indicative of future results.</p>
             </div>
         </div>
@@ -388,6 +385,20 @@
             </div>
             <div class="flex-1 p-4">
                 <iframe id="chart-iframe" src="" class="w-full h-full border-0 rounded-lg"></iframe>
+            </div>
+        </div>
+    </div>
+
+    <!-- Legal Modal -->
+    <div id="legal-modal" class="fixed inset-0 z-50 hidden">
+        <div class="absolute inset-0 bg-black bg-opacity-50" onclick="closeLegalModal()"></div>
+        <div class="absolute inset-4 md:inset-10 lg:inset-20 bg-white rounded-xl shadow-2xl flex flex-col">
+            <div class="flex justify-between items-center p-4 border-b">
+                <h3 id="legal-modal-title" class="text-xl font-bold">Legal</h3>
+                <button onclick="closeLegalModal()" class="text-gray-500 hover:text-gray-700 text-2xl">&times;</button>
+            </div>
+            <div id="legal-modal-content" class="flex-1 p-6 overflow-y-auto prose max-w-none">
+                <!-- Content injected by JavaScript -->
             </div>
         </div>
     </div>
@@ -901,8 +912,128 @@
 
         // Close modal on Escape key
         document.addEventListener('keydown', (e) => {
-            if (e.key === 'Escape') closeChartModal();
+            if (e.key === 'Escape') {
+                closeChartModal();
+                closeLegalModal();
+            }
         });
+
+        // =====================================================
+        // LEGAL MODALS
+        // =====================================================
+
+        const LEGAL_CONTENT = {
+            disclosures: {
+                title: 'Important Disclosures',
+                content: `
+                    <p class="text-sm text-gray-500 mb-4">Last Updated: January 2026</p>
+
+                    <h4 class="text-lg font-bold mt-6 mb-3">Investment Risks</h4>
+                    <p class="mb-4">Investing in hedge funds involves significant risks, including the potential loss of principal. Dreadnaught Capital's investment strategies involve leveraged derivatives trading, which can amplify both gains and losses. Past performance is not indicative of future results.</p>
+
+                    <h4 class="text-lg font-bold mt-6 mb-3">Accredited Investors Only</h4>
+                    <p class="mb-4">Investment in Dreadnaught Capital funds is limited to accredited investors as defined by SEC Regulation D. Prospective investors must meet certain income or net worth requirements and must be able to bear the economic risk of the investment.</p>
+
+                    <h4 class="text-lg font-bold mt-6 mb-3">No Guarantee of Returns</h4>
+                    <p class="mb-4">There can be no assurance that the Fund will achieve its investment objective or that investors will receive a return on their capital. The performance data presented on this website represents historical performance and does not guarantee future results.</p>
+
+                    <h4 class="text-lg font-bold mt-6 mb-3">Regulatory Information</h4>
+                    <p class="mb-4">Dreadnaught Capital is a private investment fund and is not registered as an investment company under the Investment Company Act of 1940. The fund operates under exemptions provided by applicable securities laws.</p>
+
+                    <h4 class="text-lg font-bold mt-6 mb-3">Forward-Looking Statements</h4>
+                    <p class="mb-4">This website may contain forward-looking statements regarding the Fund's anticipated performance, strategies, and market conditions. These statements are based on current expectations and assumptions and are subject to risks and uncertainties that could cause actual results to differ materially.</p>
+
+                    <h4 class="text-lg font-bold mt-6 mb-3">No Investment Advice</h4>
+                    <p class="mb-4">The information on this website is provided for informational purposes only and does not constitute investment advice, a recommendation, or an offer to buy or sell any securities. Prospective investors should consult with their own financial, legal, and tax advisors before making any investment decisions.</p>
+
+                    <h4 class="text-lg font-bold mt-6 mb-3">Conflicts of Interest</h4>
+                    <p class="mb-4">Dreadnaught Capital and its affiliates may have conflicts of interest with respect to the Fund's investments. These conflicts are disclosed in the Fund's offering documents, which are provided to prospective investors.</p>
+                `
+            },
+            privacy: {
+                title: 'Privacy Policy',
+                content: `
+                    <p class="text-sm text-gray-500 mb-4">Last Updated: January 2026</p>
+
+                    <h4 class="text-lg font-bold mt-6 mb-3">Information We Collect</h4>
+                    <p class="mb-4">We collect information you provide directly to us, including your name, email address, phone number, and organization when you submit an inquiry through our contact form. We may also collect information about your interactions with our website.</p>
+
+                    <h4 class="text-lg font-bold mt-6 mb-3">How We Use Your Information</h4>
+                    <p class="mb-4">We use the information we collect to:</p>
+                    <ul class="list-disc pl-6 mb-4">
+                        <li>Respond to your inquiries and provide information about our services</li>
+                        <li>Send you updates and marketing communications (with your consent)</li>
+                        <li>Comply with legal and regulatory requirements</li>
+                        <li>Improve our website and services</li>
+                    </ul>
+
+                    <h4 class="text-lg font-bold mt-6 mb-3">Information Sharing</h4>
+                    <p class="mb-4">We do not sell, trade, or rent your personal information to third parties. We may share your information with service providers who assist us in operating our website and conducting our business, subject to confidentiality agreements.</p>
+
+                    <h4 class="text-lg font-bold mt-6 mb-3">Data Security</h4>
+                    <p class="mb-4">We implement appropriate technical and organizational measures to protect your personal information against unauthorized access, alteration, disclosure, or destruction. However, no method of transmission over the Internet is 100% secure.</p>
+
+                    <h4 class="text-lg font-bold mt-6 mb-3">Cookies and Tracking</h4>
+                    <p class="mb-4">Our website may use cookies and similar tracking technologies to enhance your browsing experience. You can control cookie preferences through your browser settings.</p>
+
+                    <h4 class="text-lg font-bold mt-6 mb-3">Your Rights</h4>
+                    <p class="mb-4">You have the right to access, correct, or delete your personal information. To exercise these rights or if you have questions about our privacy practices, please contact us at info@dreadnaughtcapital.com.</p>
+
+                    <h4 class="text-lg font-bold mt-6 mb-3">Changes to This Policy</h4>
+                    <p class="mb-4">We may update this Privacy Policy from time to time. We will notify you of any changes by posting the new policy on this page and updating the "Last Updated" date.</p>
+                `
+            },
+            terms: {
+                title: 'Terms of Service',
+                content: `
+                    <p class="text-sm text-gray-500 mb-4">Last Updated: January 2026</p>
+
+                    <h4 class="text-lg font-bold mt-6 mb-3">Acceptance of Terms</h4>
+                    <p class="mb-4">By accessing and using this website, you accept and agree to be bound by these Terms of Service. If you do not agree to these terms, please do not use this website.</p>
+
+                    <h4 class="text-lg font-bold mt-6 mb-3">Use of Website</h4>
+                    <p class="mb-4">This website is provided for informational purposes only. The content on this website is not intended to be a complete description of Dreadnaught Capital or its investment strategies and should not be relied upon as such.</p>
+
+                    <h4 class="text-lg font-bold mt-6 mb-3">Intellectual Property</h4>
+                    <p class="mb-4">All content on this website, including text, graphics, logos, and images, is the property of Dreadnaught Capital and is protected by intellectual property laws. You may not reproduce, distribute, or create derivative works without our express written permission.</p>
+
+                    <h4 class="text-lg font-bold mt-6 mb-3">No Offer or Solicitation</h4>
+                    <p class="mb-4">Nothing on this website constitutes an offer to sell or a solicitation of an offer to buy any securities. Any such offer or solicitation will be made only by means of a confidential private placement memorandum to qualified investors.</p>
+
+                    <h4 class="text-lg font-bold mt-6 mb-3">Disclaimer of Warranties</h4>
+                    <p class="mb-4">This website is provided "as is" without warranties of any kind, either express or implied. We do not warrant that the website will be uninterrupted, error-free, or free of viruses or other harmful components.</p>
+
+                    <h4 class="text-lg font-bold mt-6 mb-3">Limitation of Liability</h4>
+                    <p class="mb-4">To the fullest extent permitted by law, Dreadnaught Capital shall not be liable for any direct, indirect, incidental, special, or consequential damages arising out of or in connection with your use of this website.</p>
+
+                    <h4 class="text-lg font-bold mt-6 mb-3">Governing Law</h4>
+                    <p class="mb-4">These Terms of Service shall be governed by and construed in accordance with the laws of the State of California, without regard to its conflict of law provisions.</p>
+
+                    <h4 class="text-lg font-bold mt-6 mb-3">Contact Information</h4>
+                    <p class="mb-4">If you have any questions about these Terms of Service, please contact us at info@dreadnaughtcapital.com.</p>
+                `
+            }
+        };
+
+        function openLegalModal(type) {
+            const modal = document.getElementById('legal-modal');
+            const title = document.getElementById('legal-modal-title');
+            const content = document.getElementById('legal-modal-content');
+
+            const legal = LEGAL_CONTENT[type];
+            if (!legal) return;
+
+            title.textContent = legal.title;
+            content.innerHTML = legal.content;
+            modal.classList.remove('hidden');
+            document.body.style.overflow = 'hidden';
+        }
+
+        function closeLegalModal() {
+            const modal = document.getElementById('legal-modal');
+            modal.classList.add('hidden');
+            document.body.style.overflow = '';
+        }
 
         // =====================================================
         // FORM SUBMISSION
