--- a/index.html
+++ b/index.html
@@ -330,16 +330,16 @@
     <!-- Footer -->
     <footer class="bg-gray-900 text-gray-400 py-12">
         <div class="container mx-auto px-6">
-            <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
-                <div>
-                    <div class="flex items-center space-x-2 mb-4">
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-8 max-w-4xl mx-auto text-center md:text-left">
+                <div class="md:text-left">
+                    <div class="flex items-center space-x-2 mb-4 justify-center md:justify-start">
                         <div class="w-10 h-10 bg-accent rounded-lg flex items-center justify-center">
                             <i class="fas fa-chart-line text-white text-xl"></i>
                         </div>
                         <span class="text-xl font-bold text-white">Dreadnaught</span>
                     </div>
                     <p class="mb-4">AI-powered hedge fund delivering superior risk-adjusted returns.</p>
-                    <div class="flex space-x-4">
+                    <div class="flex space-x-4 justify-center md:justify-start">
                         <a href="#" class="text-gray-400 hover:text-white transition"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
@@ -359,13 +359,6 @@
                         <li><a href="#" onclick="openLegalModal('privacy'); return false;" class="hover:text-white transition">Privacy Policy</a></li>
                         <li><a href="#" onclick="openLegalModal('terms'); return false;" class="hover:text-white transition">Terms of Service</a></li>
                     </ul>
-                </div>
-                <div>
-                    <h3 class="text-white font-semibold mb-4">Contact</h3>
-                    <address class="not-italic">
-                        <p class="mb-2">Encinitas, CA 92024</p>
-                        <p class="mb-2">info@dreadnaughtcapital.com</p>
-                    </address>
                 </div>
             </div>
             <div class="border-t border-gray-800 mt-12 pt-8 text-sm text-center">
