--- a/index.html
+++ b/index.html
@@ -1204,10 +1204,38 @@ function doGet(e) {
             });
         });
 
+        // =====================================================
+        // VISIT TRACKING
+        // =====================================================
+
+        function trackVisit() {
+            // Don't track if no script URL configured
+            if (CONFIG.FORM_SCRIPT_URL === 'YOUR_GOOGLE_APPS_SCRIPT_URL') return;
+
+            const visitData = {
+                type: 'visit',
+                timestamp: new Date().toISOString(),
+                page: window.location.href,
+                referrer: document.referrer || 'direct',
+                userAgent: navigator.userAgent,
+                screenSize: `${window.screen.width}x${window.screen.height}`,
+                language: navigator.language
+            };
+
+            // Send to Google Apps Script (fire and forget)
+            fetch(CONFIG.FORM_SCRIPT_URL, {
+                method: 'POST',
+                mode: 'no-cors',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify(visitData)
+            }).catch(() => {}); // Silently ignore errors
+        }
+
         // Initialize when DOM is ready
         document.addEventListener('DOMContentLoaded', () => {
             init();
             setupFormHandler();
+            trackVisit();
         });
     </script>
 </body>
