Update CTA subtitle formatting in index.html

--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
                 team_title: 'World-Class Team',
                 team_subtitle: 'Combining decades of hedge fund experience with cutting-edge machine learning expertise.',
                 cta_title: 'Ready to Invest with Dreadnaught?',
-                cta_subtitle: 'Minimum investment: $100,000. Limited capacity available.',
+                cta_subtitle: 'Minimum investment: $100,000. ',
                 performance_chart: '' // Add your Google Sheets chart URL here
             }
         };
