--- a/index.html
+++ b/index.html
@@ -470,8 +470,8 @@
                 { name: 'Mark P. Long', title: 'Head of Derivatives Trading', bio: '15+ years experience trading exotic derivatives at Goldman Sachs and Bridgewater.', image_url: 'https://picsum.photos/400/300?random=4' }
             ],
             content: {
-                hero_title: 'AI-Powered Alpha in Any Market',
-                hero_subtitle: 'Our machine learning algorithms systematically identify and exploit inefficiencies in global derivatives markets, delivering uncorrelated returns regardless of market direction.',
+                hero_title: 'Alpha, Alpha, Everywhere!',
+                hero_subtitle: 'Our algorithms systematically identify and exploit inefficiencies in derivatives markets, delivering uncorrelated returns regardless of market direction.',
                 hero_image: 'https://images.unsplash.com/photo-1611974789855-9c2a0a7236a3?w=600&h=400&fit=crop',
                 performance_title: 'Exceptional Risk-Adjusted Returns',
                 performance_subtitle: 'Our proprietary ML models have consistently outperformed traditional hedge fund strategies across all market regimes.',
